AV-689: Fix guide menu layout issues

--- a/opendata-assets/src/less/drupal/menu.less
+++ b/opendata-assets/src/less/drupal/menu.less
@@ -3,6 +3,7 @@
   top: 0;
   position: sticky;
   max-height: 100vh;
+  max-width: 350px;
   border: @navbar-border;
   z-index: 255;
 
@@ -56,6 +57,7 @@
     position: relative;
     margin-top: 0;
     margin-bottom: 0;
+    padding: 10px;
 
     &.active {
       background-color: @opendata-brand-primary;
